# sina

./: .env.example  .gitignore  QWEN.md  pyproject.toml
datos/gasolineras/: catalogo_municipios.json  index.html  index_template.html  municipios.csv
datos/gasolineras/hermosillo/: gas_prices_hermosillo.csv  gasolineras_hermosillo.json
notebooks/: _insert_seed_cell.py  df_canasta_basica.csv  extraccion_text_v2.ipynb  extraccion_texto.ipynb  gas_01.ipynb  gas_02.ipynb  gas_lp_01.ipynb  gemma3.json  mapa_diesel.html  mapa_magna.html  mapa_premium.html  municipios.ipynb  primeros_intentos.ipynb  qqp_01.ipynb
src/sina/: main.py
src/sina/ETL/: extract_casa_ley.py  extract_gas.py  extract_qqp.py  pipeline.py
src/sina/abstract_tools/: supermarket_ocr.py
src/sina/config/: classes.json  credentials.py  paths.py  prompt.py  settings.py  timezone.py
src/sina/db/: models.py  repository.py  seeder.py
src/sina/ollama/: extract_flyer_text.py
src/sina/processing/: image_segmentation.py  records.py
src/sina/processing_img/: image_segmentation.py
src/sina/scraping/: casa_ley.py  gas.py  gas_lp.py  gas_pipeline.py  qqp.py
src/sina/settings/: config.py  credentials.py
src/sina/tools/: extract_text.py  image_segmentation.py  img_rm_whitespace.py  ollama_ocr.py  zone_detector.py  zone_detector_v2.py
static/css/: annotator.css  gas_lp.css  gasolina.css
static/js/: annotator.js  gas_lp.js  gasolina.js
templates/: annotator.html  gas_lp.html  gasolina.html
