[project]
name = "sina"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "asttokens>=3.0.0",
    "beautifulsoup4>=4.13.5",
    "comm>=0.2.3",
    "dotenv>=0.9.9",
    "image>=1.5.33",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "ollama>=0.5.4",
    "ollama-ocr>=0.1.6",
    "openai-whisper>=20250625",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "rarfile>=4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "selenium>=4.35.0",
    "tiktokapi>=7.2.0",
    "torch>=2.8.0",
]

[project.scripts]
sina = "sina:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
