[project]
name = "sina"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "image>=1.5.33",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "ollama>=0.5.4",
    "ollama-ocr>=0.1.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "rarfile>=4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.41.0",
]

[project.scripts]
sina = "sina:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
